v0/book/content/pages/source-code/apps/Settings/Home.md

# 
# Settings

## Namespaces

### \Hubleto\App\Community\Settings

#### Classes

| Class                                                       | Description |
|-------------------------------------------------------------|-------------|
| [`Loader`](./classes/Hubleto/App/Community/Settings/Loader) |             |

### \Hubleto\App\Community\Settings\Controllers

#### Classes

| Class                                                                                                       | Description |
|-------------------------------------------------------------------------------------------------------------|-------------|
| [`ActivityTypes`](./classes/Hubleto/App/Community/Settings/Controllers/ActivityTypes)                       |             |
| [`Apps`](./classes/Hubleto/App/Community/Settings/Controllers/Apps)                                         |             |
| [`Companies`](./classes/Hubleto/App/Community/Settings/Controllers/Companies)                               |             |
| [`Config`](./classes/Hubleto/App/Community/Settings/Controllers/Config)                                     |             |
| [`Countries`](./classes/Hubleto/App/Community/Settings/Controllers/Countries)                               |             |
| [`Currencies`](./classes/Hubleto/App/Community/Settings/Controllers/Currencies)                             |             |
| [`Dashboard`](./classes/Hubleto/App/Community/Settings/Controllers/Dashboard)                               |             |
| [`General`](./classes/Hubleto/App/Community/Settings/Controllers/General)                                   |             |
| [`InvoiceProfiles`](./classes/Hubleto/App/Community/Settings/Controllers/InvoiceProfiles)                   |             |
| [`MyAccount`](./classes/Hubleto/App/Community/Settings/Controllers/MyAccount)                               |             |
| [`Permissions`](./classes/Hubleto/App/Community/Settings/Controllers/Permissions)                           |             |
| [`RolePermissions`](./classes/Hubleto/App/Community/Settings/Controllers/RolePermissions)                   |             |
| [`Sidebar`](./classes/Hubleto/App/Community/Settings/Controllers/Sidebar)                                   |             |
| [`Teams`](./classes/Hubleto/App/Community/Settings/Controllers/Teams)                                       |             |
| [`Theme`](./classes/Hubleto/App/Community/Settings/Controllers/Theme)                                       |             |
| [`UpdateDefaultPermissions`](./classes/Hubleto/App/Community/Settings/Controllers/UpdateDefaultPermissions) |             |
| [`UserRoles`](./classes/Hubleto/App/Community/Settings/Controllers/UserRoles)                               |             |
| [`Users`](./classes/Hubleto/App/Community/Settings/Controllers/Users)                                       |             |

### \Hubleto\App\Community\Settings\Controllers\Api

#### Classes

| Class                                                                                         | Description |
|-----------------------------------------------------------------------------------------------|-------------|
| [`GetPermissions`](./classes/Hubleto/App/Community/Settings/Controllers/Api/GetPermissions)   |             |
| [`SavePermissions`](./classes/Hubleto/App/Community/Settings/Controllers/Api/SavePermissions) |             |

### \Hubleto\App\Community\Settings\Models

#### Classes

| Class                                                                              | Description |
|------------------------------------------------------------------------------------|-------------|
| [`ActivityType`](./classes/Hubleto/App/Community/Settings/Models/ActivityType)     |             |
| [`Company`](./classes/Hubleto/App/Community/Settings/Models/Company)               |             |
| [`Country`](./classes/Hubleto/App/Community/Settings/Models/Country)               |             |
| [`Currency`](./classes/Hubleto/App/Community/Settings/Models/Currency)             |             |
| [`InvoiceProfile`](./classes/Hubleto/App/Community/Settings/Models/InvoiceProfile) |             |
| [`Permission`](./classes/Hubleto/App/Community/Settings/Models/Permission)         |             |
| [`RolePermission`](./classes/Hubleto/App/Community/Settings/Models/RolePermission) |             |
| [`Setting`](./classes/Hubleto/App/Community/Settings/Models/Setting)               |             |
| [`Team`](./classes/Hubleto/App/Community/Settings/Models/Team)                     |             |
| [`TeamMember`](./classes/Hubleto/App/Community/Settings/Models/TeamMember)         |             |
| [`User`](./classes/Hubleto/App/Community/Settings/Models/User)                     |             |
| [`UserHasRole`](./classes/Hubleto/App/Community/Settings/Models/UserHasRole)       |             |
| [`UserRole`](./classes/Hubleto/App/Community/Settings/Models/UserRole)             |             |

### \Hubleto\App\Community\Settings\Models\RecordManagers

#### Classes

| Class                                                                                             | Description |
|---------------------------------------------------------------------------------------------------|-------------|
| [`ActivityType`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/ActivityType)     |             |
| [`Company`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Company)               |             |
| [`Country`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Country)               |             |
| [`Currency`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Currency)             |             |
| [`InvoiceProfile`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/InvoiceProfile) |             |
| [`Permission`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Permission)         |             |
| [`RolePermission`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/RolePermission) |             |
| [`Setting`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Setting)               |             |
| [`Team`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Team)                     |             |
| [`TeamMember`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/TeamMember)         |             |
| [`User`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/User)                     |             |
| [`UserHasRole`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/UserHasRole)       |             |
| [`UserRole`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/UserRole)             |             |
