v1/book/content/pages/source-code/apps/Settings/Home.md

# 
# Settings

## Namespaces

### \Hubleto\App\Community\Settings

#### Classes

| Class                                                                               | Description                         |
|-------------------------------------------------------------------------------------|-------------------------------------|
| [`Loader`](./classes/Hubleto/App/Community/Settings/Loader)                         |                                     |
| [`PermissionsManager`](./classes/Hubleto/App/Community/Settings/PermissionsManager) | Class managing Hubleto permissions. |

### \Hubleto\App\Community\Settings\Controllers

#### Classes

| Class                                                                                                       | Description |
|-------------------------------------------------------------------------------------------------------------|-------------|
| [`ActivityTypes`](./classes/Hubleto/App/Community/Settings/Controllers/ActivityTypes)                       |             |
| [`Apps`](./classes/Hubleto/App/Community/Settings/Controllers/Apps)                                         |             |
| [`Companies`](./classes/Hubleto/App/Community/Settings/Controllers/Companies)                               |             |
| [`Config`](./classes/Hubleto/App/Community/Settings/Controllers/Config)                                     |             |
| [`Countries`](./classes/Hubleto/App/Community/Settings/Controllers/Countries)                               |             |
| [`Currencies`](./classes/Hubleto/App/Community/Settings/Controllers/Currencies)                             |             |
| [`Dashboard`](./classes/Hubleto/App/Community/Settings/Controllers/Dashboard)                               |             |
| [`General`](./classes/Hubleto/App/Community/Settings/Controllers/General)                                   |             |
| [`LogViewer`](./classes/Hubleto/App/Community/Settings/Controllers/LogViewer)                               |             |
| [`MyAccount`](./classes/Hubleto/App/Community/Settings/Controllers/MyAccount)                               |             |
| [`Permissions`](./classes/Hubleto/App/Community/Settings/Controllers/Permissions)                           |             |
| [`RolePermissions`](./classes/Hubleto/App/Community/Settings/Controllers/RolePermissions)                   |             |
| [`Sidebar`](./classes/Hubleto/App/Community/Settings/Controllers/Sidebar)                                   |             |
| [`Teams`](./classes/Hubleto/App/Community/Settings/Controllers/Teams)                                       |             |
| [`Theme`](./classes/Hubleto/App/Community/Settings/Controllers/Theme)                                       |             |
| [`UpdateDefaultPermissions`](./classes/Hubleto/App/Community/Settings/Controllers/UpdateDefaultPermissions) |             |
| [`UserRoles`](./classes/Hubleto/App/Community/Settings/Controllers/UserRoles)                               |             |
| [`Users`](./classes/Hubleto/App/Community/Settings/Controllers/Users)                                       |             |

### \Hubleto\App\Community\Settings\Controllers\Api

#### Classes

| Class                                                                                         | Description |
|-----------------------------------------------------------------------------------------------|-------------|
| [`GetPermissions`](./classes/Hubleto/App/Community/Settings/Controllers/Api/GetPermissions)   |             |
| [`SavePermissions`](./classes/Hubleto/App/Community/Settings/Controllers/Api/SavePermissions) |             |

### \Hubleto\App\Community\Settings\Extendibles

#### Classes

| Class                                                                 | Description |
|-----------------------------------------------------------------------|-------------|
| [`Tools`](./classes/Hubleto/App/Community/Settings/Extendibles/Tools) |             |

### \Hubleto\App\Community\Settings\Models

#### Classes

| Class                                                                              | Description |
|------------------------------------------------------------------------------------|-------------|
| [`ActivityType`](./classes/Hubleto/App/Community/Settings/Models/ActivityType)     |             |
| [`Company`](./classes/Hubleto/App/Community/Settings/Models/Company)               |             |
| [`Country`](./classes/Hubleto/App/Community/Settings/Models/Country)               |             |
| [`Currency`](./classes/Hubleto/App/Community/Settings/Models/Currency)             |             |
| [`Permission`](./classes/Hubleto/App/Community/Settings/Models/Permission)         |             |
| [`RolePermission`](./classes/Hubleto/App/Community/Settings/Models/RolePermission) |             |
| [`Setting`](./classes/Hubleto/App/Community/Settings/Models/Setting)               |             |
| [`Team`](./classes/Hubleto/App/Community/Settings/Models/Team)                     |             |
| [`TeamMember`](./classes/Hubleto/App/Community/Settings/Models/TeamMember)         |             |

### \Hubleto\App\Community\Settings\Models\Migrations

#### Classes

| Class                                                                                                   | Description |
|---------------------------------------------------------------------------------------------------------|-------------|
| [`ActivityType_0001`](./classes/Hubleto/App/Community/Settings/Models/Migrations/ActivityType_0001)     |             |
| [`Company_0001`](./classes/Hubleto/App/Community/Settings/Models/Migrations/Company_0001)               |             |
| [`Company_0002`](./classes/Hubleto/App/Community/Settings/Models/Migrations/Company_0002)               |             |
| [`Country_0001`](./classes/Hubleto/App/Community/Settings/Models/Migrations/Country_0001)               |             |
| [`Currency_0001`](./classes/Hubleto/App/Community/Settings/Models/Migrations/Currency_0001)             |             |
| [`Permission_0001`](./classes/Hubleto/App/Community/Settings/Models/Migrations/Permission_0001)         |             |
| [`RolePermission_0001`](./classes/Hubleto/App/Community/Settings/Models/Migrations/RolePermission_0001) |             |
| [`Setting_0001`](./classes/Hubleto/App/Community/Settings/Models/Migrations/Setting_0001)               |             |
| [`Team_0001`](./classes/Hubleto/App/Community/Settings/Models/Migrations/Team_0001)                     |             |
| [`TeamMember_0001`](./classes/Hubleto/App/Community/Settings/Models/Migrations/TeamMember_0001)         |             |

### \Hubleto\App\Community\Settings\Models\RecordManagers

#### Classes

| Class                                                                                             | Description |
|---------------------------------------------------------------------------------------------------|-------------|
| [`ActivityType`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/ActivityType)     |             |
| [`Company`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Company)               |             |
| [`Country`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Country)               |             |
| [`Currency`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Currency)             |             |
| [`Permission`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Permission)         |             |
| [`RolePermission`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/RolePermission) |             |
| [`Setting`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Setting)               |             |
| [`Team`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/Team)                     |             |
| [`TeamMember`](./classes/Hubleto/App/Community/Settings/Models/RecordManagers/TeamMember)         |             |
